# house-price-predictor

./: .env  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile.api  README.md  inference.py  main.py  requirements.txt
clean_data_etl/: Dockerfile.clean_data  README.md  main.py  requirements.txt
docs/: data_description.md  running_scripts.md
etl_model_api/: Dockerfile.etl  README.md  main.py  requirements.txt
model_training_etl/: Dockerfile.model_etl  README.md  main.py  requirements.txt
notebooks/: 00_data_engineering.ipynb  01_exploratory_data_analysis.ipynb  02_feature_engineering.ipynb  03_experimentation.ipynb  04_view_pipeline_results.ipynb
prepross_etl/: Dockerfile.preprocessor  README.md  main.py  requirements.txt
scripts/: run_process_test.py
src/: README.md  pyproject.toml
src/api/: inference.py  main.py
src/house_price_predictor/: README.md  house_price_config.yml  version.py
src/house_price_predictor/build_model/: train_model.py
src/house_price_predictor/config/: house_price_core.py  schemas.py
src/house_price_predictor/data_management/: process_raw_data.py
src/house_price_predictor/features/: engineering.py
src/house_price_predictor/utils/: house_price_logging.py
streamlit_app/: Dockerfile.app  app.py  requirements.txt
